# advent-2019-c

./: README.md
day01/: .clang-format  CMakeLists.txt  Makefile  NotUsedCMakeLists.txt  main.c
day02/: CMakeLists.txt  Makefile  day02.c  file_fns.c  file_fns.h  main  main.c  section.txt
day03/: CMakeLists.txt  main.c
day05/: CMakeLists.txt  day05.c  day05.go
day07/: CMakeLists.txt  day07.c  day07.cpp  main.c  tester.c
